src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Deal Registration Process</fullName>
        <description>Partner registration process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Calling - No Contact Made</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Duplicate - Customer</fullName>
        </values>
        <values>
            <fullName>Duplicate - Lead</fullName>
        </values>
        <values>
            <fullName>Fraud</fullName>
        </values>
        <values>
            <fullName>In Progress - Awaiting Statements</fullName>
        </values>
        <values>
            <fullName>In Progress - Follow Up Call Needed</fullName>
        </values>
        <values>
            <fullName>In Progress - Pending Approval</fullName>
        </values>
        <values>
            <fullName>In Progress - Pending Quote</fullName>
        </values>
        <values>
            <fullName>Initial Call Needed</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Lost - Incomplete Information</fullName>
        </values>
        <values>
            <fullName>Lost - Language Barrier</fullName>
        </values>
        <values>
            <fullName>Not Interested - Do Not Contact</fullName>
        </values>
        <values>
            <fullName>Not Interested - Follow Up Later</fullName>
        </values>
        <values>
            <fullName>Not Legitimate</fullName>
        </values>
        <values>
            <fullName>Requested Information Only</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Web To Lead</fullName>
        <isActive>false</isActive>
        <values>
            <fullName>Calling - No Contact Made</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Duplicate - Lead</fullName>
        </values>
        <values>
            <fullName>In Progress - Awaiting Statements</fullName>
        </values>
        <values>
            <fullName>In Progress - Follow Up Call Needed</fullName>
        </values>
        <values>
            <fullName>In Progress - Pending Approval</fullName>
        </values>
        <values>
            <fullName>Initial Call Needed</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Lost - Incomplete Information</fullName>
        </values>
        <values>
            <fullName>Lost - Language Barrier</fullName>
        </values>
        <values>
            <fullName>Not Interested - Do Not Contact</fullName>
        </values>
        <values>
            <fullName>Not Interested - Follow Up Later</fullName>
        </values>
        <values>
            <fullName>Requested Information Only</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accepts_Credit_Cards__c</fullName>
        <label>Accepts Credit Cards?</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accounts_Receivable_Amount__c</fullName>
        <label>Accounts Receivable Amount</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advance_Amount_Requested__c</fullName>
        <label>Advance Amount Requested</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Requested__c</fullName>
        <label>Amount Requested</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Awaiting_CC_Flag__c</fullName>
        <formula>if(  ISPICKVAL(Status, &quot;Awaiting Credit Card Statements&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awaiting CC Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BD_Round_Robin__c</fullName>
        <formula>MOD(VALUE(Lead_Number__c) ,2) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BD Round Robin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Best_Time_to_Call__c</fullName>
        <label>Best Time to Call?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Email_Address__c</fullName>
        <label>Business Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Open_Tax_Lien_Amount__c</fullName>
        <label>Business Open Tax Lien Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Open_Tax_Lien_Payment_Plan__c</fullName>
        <label>Business Open Tax Lien Payment Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Structure__c</fullName>
        <label>Business Structure</label>
        <picklist>
            <picklistValues>
                <fullName>C-Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proprietorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Liability Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Liability Partnership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CALC_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://calc.rapidadvance.com/lead/salesforcelead?id=&quot;&amp; CASESAFEID(Id),Id)</formula>
        <label>CALC Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Score__c</fullName>
        <label>CI Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name_Upload__c</fullName>
        <label>Campaign Name Upload</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Names__c</fullName>
        <description>This field is being used to identify Swift partners who are submitting leads.</description>
        <inlineHelpText>Swift partner campaign names.</inlineHelpText>
        <label>Campaign Names</label>
        <picklist>
            <picklistValues>
                <fullName>Artisans&apos; Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dover Commercial Lending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swift Test Campaign</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ARDI__c</fullName>
        <label>Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__AR__c</fullName>
        <label>Address Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__AS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ATZ__c</fullName>
        <label>Address Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__AV__c</fullName>
        <label>Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__LES__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lead Email Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ColdCall_Lead_Ass__c</fullName>
        <formula>if( MOD( VALUE(Lead_Number__c) ,2) =0,1,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ColdCall Lead Ass</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collateral_Available__c</fullName>
        <label>Collateral Available</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_corp_ID__c</fullName>
        <label>Company corp ID</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Advance_Company__c</fullName>
        <label>Competitor Advance Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Copy_Email__c</fullName>
        <label>Copy Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Copy_Name__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp;  LastName</formula>
        <label>Copy Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Cards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Cards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Processor__c</fullName>
        <label>Current Processor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Fax_Email__c</fullName>
        <formula>if(len(substitute(SUBSTITUTE( SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Fax, &quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;), &quot;-&quot;,&quot;&quot;) ,&quot;.&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;))=10,&quot;1&quot;&amp;substitute(SUBSTITUTE( SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Fax, &quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;), &quot;-&quot;,&quot;&quot;) ,&quot;.&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;)&amp;&quot;@efaxsend.com&quot;,&quot;Not Provided&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom Fax Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Marketing_Prescreen_Score__c</fullName>
        <label>DNB Marketing Prescreen Score</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_NOT_FAX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DO NOT FAX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateBusinessStarted__c</fullName>
        <label>Business Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Principal 1 Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Did_you_talk_to_a_Sales_Rep__c</fullName>
        <inlineHelpText>Did you talk to someone about RapidAdvance prior to submitting your application on the web?</inlineHelpText>
        <label>Did you talk to a Sales Rep.?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Does_Merchant_Own_Their_Building__c</fullName>
        <label>Does Merchant Own Their Building?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dynamic_Assignment__c</fullName>
        <formula>MOD(TODAY()-DATE(YEAR(TODAY()), 1, 1) + 1,2) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dynamic Assignment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EFax_Address__c</fullName>
        <defaultValue>&quot;1&quot;&amp;text(Fax2__c)&amp;&quot;@efaxsend.com&quot;</defaultValue>
        <description>This is for sending faxes via fax.com, Outlook...etc.</description>
        <label>EFax Address</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Custom_Field__c</fullName>
        <description>Copy of the email standard field to update to other objects.</description>
        <label>Email Custom Field</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Opened_Please_Call__c</fullName>
        <label>Email Opened - Please Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Present_Lead__c</fullName>
        <formula>if( CONTAINS(Email, &quot;@&quot;) , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Present - Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_URL__c</fullName>
        <label>Entry URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Expired_Lead__c</fullName>
        <label>Expired Lead</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Status__c</fullName>
        <label>External Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax2__c</fullName>
        <label>Fax #</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <inlineHelpText>Do not use spaces, dashes, or brackets in the fax number. Please enter as follows: 2405142010</inlineHelpText>
        <label>Fax Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Tax_ID_Number__c</fullName>
        <label>Federal Tax ID Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_or_State_Tax_Liens__c</fullName>
        <label>Federal or State Tax Liens?</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNSURE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Filed_for_bankruptcy_del__c</fullName>
        <inlineHelpText>Has Principal declared bankruptcy within the last ten (10) years?</inlineHelpText>
        <label>Filed for bankruptcy?</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Five9_Call_Counter__c</fullName>
        <label>Five9 Call Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_Brad_Leads__c</fullName>
        <label>Flag Brad Leads</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flag_Previous_Lead_Owner__c</fullName>
        <label>Flag Previous Lead Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Erick Guerrero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michael Massey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>James Lang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chris Payer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeff Hageman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peter Havenstein</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brent Gardner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michael Dodge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flag_Tim_J_Leads__c</fullName>
        <label>Flag Tim J Leads</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_Needed_Count__c</fullName>
        <formula>if(OR( ISPICKVAL( Status , &quot;Initial Call Needed&quot;),ISPICKVAL( Status , &quot;Awaiting Credit Card Statements&quot;),ISPICKVAL( Status , &quot;Follow Up Call Needed&quot;),ISPICKVAL( Status , &quot;Calling - No Contact Made&quot;),ISPICKVAL( Status , &quot;Pending Approval&quot;),ISPICKVAL( Status , &quot;Pending Quote&quot;),ISPICKVAL( Status , &quot;Open&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follow Needed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_AdGroup__c</fullName>
        <description>Used for keyword analysis. Use utm_adgroup to identify a specific product promotion or strategic campaign.</description>
        <label>Google AdGroup</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Ad_Position__c</fullName>
        <description>the position on the page that your ad appeared in, with a value such as &quot;1t2&quot;, which is equivalent to page 1, top, pos 2</description>
        <label>Google Ad Position</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Device__c</fullName>
        <description>whether the click came from mobile (including WAP), tablet, or desktop or laptop computer (which will appear as &quot;m&quot;, &quot;t&quot;, and &quot;c,&quot; respectively)</description>
        <label>Google Device</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Government_Insurace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Government Insurace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Greg_Deal_Status__c</fullName>
        <label>Greg Deal Status</label>
        <picklist>
            <picklistValues>
                <fullName>DUPLICATE LEAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up Call Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete contact/company information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language Barrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Legitimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not qualified, Wrong SIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not the Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested Information Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Started application sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>submitted to Partner-Starter Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Greg_Partner_Final_Status__c</fullName>
        <label>Greg Partner Final Status</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Success</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Greg_Success_Number__c</fullName>
        <label>Greg Success Number</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Greg_Total_Lead_Success__c</fullName>
        <formula>value(text( Greg_Success_Number__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Greg Total Lead Success</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Income__c</fullName>
        <label>Gross Monthly Income</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Sales_Cur__c</fullName>
        <label>Gross Monthly Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Sales__c</fullName>
        <label>Gross Monthly Sales</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 2,500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2,500 - 5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5,000 - 10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,000 - 20,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20,000 - 40,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40,000 - 60,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60,000 - 80,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80,000 - 100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100,000 - 120,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120,000 - 140,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>140,000 - 160,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>160,000 - 180,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>180,000 - 200,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200,000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <picklist>
            <picklistValues>
                <fullName>Current Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mag/Newspaper Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement/Bill Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV Commercial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_long_has_your_business_been_open__c</fullName>
        <label>How long has your business been open?</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <description>IP address of lead</description>
        <label>IP Address</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_please_explain__c</fullName>
        <label>If &quot;Other&quot; please explain:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inquiry_Date__c</fullName>
        <label>Inquiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Insurance_Type_1__c</fullName>
        <label>Insurance Type 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Type_2__c</fullName>
        <label>Insurance Type 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Type_3__c</fullName>
        <label>Insurance Type 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internet_Cost__c</fullName>
        <formula>if( Mkt_Channels__c ==&quot;Internet&quot;,case(Month(DATEVALUE( CreatedDate)),1,76.35,2,72.89,3,66.51,4,60.65,5,68.60,6,13.58,7,15.58,8,35.45,36.94),if( Mkt_Channels__c ==&quot;TM&quot;,case(Month(DATEVALUE( CreatedDate)),1,75,2,75,3,0,4,0,5,20,6,20,7,0,8,16.17,23.41),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Monthly Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Business_for_Sale__c</fullName>
        <label>Is Business for Sale?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Keyword_Match_Type__c</fullName>
        <label>Keyword Match Type</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landlord_Agent_Name__c</fullName>
        <label>Landlord/Agent Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Landlord_Agent_Phone_Number__c</fullName>
        <label>Landlord/Agent Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_3_Months_Avg_Credit_Card_Processing__c</fullName>
        <label>Last 3 Months Avg Credit Card Processing</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadCount__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadId18Char__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadId18Char</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadOwnerFax__c</fullName>
        <formula>Owner:User.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadOwnerID_Full__c</fullName>
        <formula>CASESAFEID(OwnerId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner ID (Full)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadOwnerID__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadOwnerID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Age_trigger__c</fullName>
        <formula>IF( OR( ISPICKVAL(  Status , &quot;Calling - No Contact Made&quot;), ISPICKVAL( Status , &quot;Follow Up Call Needed&quot;), ISPICKVAL(Status , &quot;Initial Call Needed&quot;),ISPICKVAL( Status, &quot;Awaiting Credit Card Statements&quot;) ) , 0, 1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age trigger</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Country__c</fullName>
        <formula>IF( OR(State =  &quot;Alberta&quot; ,State =  &quot;Ontario&quot; ,State =  &quot;Nunavut&quot; ,State =  &quot;Nova Scotia&quot; ,State =  &quot;Newfoundland and Labrador&quot; ,State =  &quot;New Brunswick&quot; ,State =  &quot;Manitoba&quot; ,State =  &quot;British Columbia&quot;,State =  &quot;Quebec&quot; ,State =  &quot;Saskatchewan&quot; ,State =  &quot;Yukon&quot;, State=&quot;AB&quot;, State=&quot;BC&quot;, State=&quot;MB&quot;, State=&quot;NB&quot;, State=&quot;NL&quot;, State=&quot;NS&quot;, State=&quot;ON&quot;, State=&quot;PE&quot;, State=&quot;QC&quot;, State=&quot;SK&quot;, State=&quot;NT&quot;, State=&quot;NU&quot;, State=&quot;YT&quot;) , &quot;Canada&quot;,&quot;USA&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Level__c</fullName>
        <label>Lead Level</label>
        <picklist>
            <picklistValues>
                <fullName>1 - New Live Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Called Lead; Not Contact Yet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Made Contact; Need to Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Lead Interested; Submitting CC Stmnts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Rec&apos;d CC Stmnts; Preparing Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Quote Submitted; Waiting On Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - Quote Approved; Lead ok to Convert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - Future Possibility for Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - No Future Possibility for Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>